--- a/Bookshelf/Views/UpdatePassword.xaml
+++ b/Bookshelf/Views/UpdatePassword.xaml
@@ -14,12 +14,15 @@
         <StackLayout>
             <Frame IsEnabled="{Binding IsNotBusy}" Style="{StaticResource FramePrimary}">
                 <VerticalStackLayout>
-                    <components:BorderedEntry LabelText="Email" Text="{Binding Email}" />
+                    <components:BorderedEntry
+                        LabelText="Email"
+                        MaxLength="250"
+                        Text="{Binding Email}" />
                     <Button
                         Margin="0,10,0,10"
                         Command="{Binding UpdatePasswordCommand}"
                         ContentLayout="Left, 20"
-                        FontSize="20"
+                        SemanticProperties.Description="Enviar email de atualização de senha"
                         Style="{StaticResource BtnPrimary}"
                         Text="Enviar Email">
                         <Button.ImageSource>
