--- a/Bookshelf/Views/Book/AddBook.xaml
+++ b/Bookshelf/Views/Book/AddBook.xaml
@@ -24,8 +24,12 @@
                     <components:BorderedEntry
                         Enabled="{Binding LblTitleIsEnabled}"
                         LabelText="Título"
+                        MaxLength="100"
                         Text="{Binding Title}" />
-                    <components:BorderedEntry LabelText="*Subtítulo" Text="{Binding SubTitle}" />
+                    <components:BorderedEntry
+                        LabelText="*Subtítulo"
+                        MaxLength="100"
+                        Text="{Binding SubTitle}" />
 
                     <Grid HorizontalOptions="FillAndExpand">
                         <Grid.RowDefinitions>
@@ -59,7 +63,10 @@
                             Padding="0"
                             HorizontalOptions="FillAndExpand"
                             VerticalOptions="Start">
-                            <components:BorderedEntry LabelText="Autor(es)" Text="{Binding Authors}" />
+                            <components:BorderedEntry
+                                LabelText="Autor(es)"
+                                MaxLength="150"
+                                Text="{Binding Authors}" />
                         </StackLayout>
                         <StackLayout
                             Grid.Row="2"
@@ -77,7 +84,10 @@
                             Padding="0"
                             HorizontalOptions="FillAndExpand"
                             VerticalOptions="Start">
-                            <components:BorderedEntry LabelText="*Gênero" Text="{Binding Genre}" />
+                            <components:BorderedEntry
+                                LabelText="*Gênero"
+                                MaxLength="50"
+                                Text="{Binding Genre}" />
                         </StackLayout>
                     </Grid>
                     <StackLayout
@@ -85,7 +95,10 @@
                         Padding="0"
                         HorizontalOptions="FillAndExpand"
                         VerticalOptions="Start">
-                        <components:BorderedEntry LabelText="*Isbn" Text="{Binding Isbn}" />
+                        <components:BorderedEntry
+                            LabelText="*Isbn"
+                            MaxLength="100"
+                            Text="{Binding Isbn}" />
                     </StackLayout>
                     <BoxView
                         Margin="0,10,0,10"
