--- a/Bookshelf/Components/RatingBar.xaml
+++ b/Bookshelf/Components/RatingBar.xaml
@@ -6,78 +6,78 @@
     x:Name="this"
     IsVisible="{Binding Source={x:Reference this}, Path=RatingBarIsVisible}">
     <Label IsVisible="false" Text="{Binding Source={x:Reference this}, Path=Rate}" />
-    <Frame
+    <!--<Frame
         Margin="0,5,0,5"
         Padding="10,0,10,0"
         BackgroundColor="#101923"
         BorderColor="{StaticResource ActiveColor}"
         CornerRadius="5"
-        HorizontalOptions="CenterAndExpand">
-        <Grid Margin="0,10,0,10" HorizontalOptions="Center">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Image
-                Grid.Row="0"
-                Grid.Column="0"
-                Margin="0,0,3,0"
-                HeightRequest="30"
-                HorizontalOptions="Center"
-                Source="{Binding Source={x:Reference this}, Path=ImgStar1}">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding Source={x:Reference this}, Path=ImgStar1ClickCommand}" NumberOfTapsRequired="1" />
-                </Image.GestureRecognizers>
-            </Image>
-            <Image
-                Grid.Row="0"
-                Grid.Column="1"
-                Margin="0,0,3,0"
-                HeightRequest="30"
-                HorizontalOptions="Center"
-                Source="{Binding Source={x:Reference this}, Path=ImgStar2}">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding Source={x:Reference this}, Path=ImgStar2ClickCommand}" NumberOfTapsRequired="1" />
-                </Image.GestureRecognizers>
-            </Image>
-            <Image
-                Grid.Row="0"
-                Grid.Column="2"
-                Margin="0,0,3,0"
-                HeightRequest="30"
-                HorizontalOptions="Center"
-                Source="{Binding Source={x:Reference this}, Path=ImgStar3}">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding Source={x:Reference this}, Path=ImgStar3ClickCommand}" NumberOfTapsRequired="1" />
-                </Image.GestureRecognizers>
-            </Image>
-            <Image
-                Grid.Row="0"
-                Grid.Column="3"
-                Margin="0,0,3,0"
-                HeightRequest="30"
-                HorizontalOptions="Center"
-                Source="{Binding Source={x:Reference this}, Path=ImgStar4}">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding Source={x:Reference this}, Path=ImgStar4ClickCommand}" NumberOfTapsRequired="1" />
-                </Image.GestureRecognizers>
-            </Image>
-            <Image
-                Grid.Row="0"
-                Grid.Column="4"
-                HeightRequest="30"
-                HorizontalOptions="Center"
-                Source="{Binding Source={x:Reference this}, Path=ImgStar5}">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding Source={x:Reference this}, Path=ImgStar5ClickCommand}" NumberOfTapsRequired="1" />
-                </Image.GestureRecognizers>
-            </Image>
-        </Grid>
-    </Frame>
+        HorizontalOptions="CenterAndExpand">-->
+    <Grid Margin="0,10,0,10" HorizontalOptions="Center">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Image
+            Grid.Row="0"
+            Grid.Column="0"
+            Margin="0,0,3,0"
+            HeightRequest="{Binding Source={x:Reference this}, Path=HeightIcons}"
+            HorizontalOptions="Center"
+            Source="{Binding Source={x:Reference this}, Path=ImgStar1}">
+            <Image.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding Source={x:Reference this}, Path=ImgStar1ClickCommand}" NumberOfTapsRequired="1" />
+            </Image.GestureRecognizers>
+        </Image>
+        <Image
+            Grid.Row="0"
+            Grid.Column="1"
+            Margin="0,0,3,0"
+            HeightRequest="{Binding Source={x:Reference this}, Path=HeightIcons}"
+            HorizontalOptions="Center"
+            Source="{Binding Source={x:Reference this}, Path=ImgStar2}">
+            <Image.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding Source={x:Reference this}, Path=ImgStar2ClickCommand}" NumberOfTapsRequired="1" />
+            </Image.GestureRecognizers>
+        </Image>
+        <Image
+            Grid.Row="0"
+            Grid.Column="2"
+            Margin="0,0,3,0"
+            HeightRequest="{Binding Source={x:Reference this}, Path=HeightIcons}"
+            HorizontalOptions="Center"
+            Source="{Binding Source={x:Reference this}, Path=ImgStar3}">
+            <Image.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding Source={x:Reference this}, Path=ImgStar3ClickCommand}" NumberOfTapsRequired="1" />
+            </Image.GestureRecognizers>
+        </Image>
+        <Image
+            Grid.Row="0"
+            Grid.Column="3"
+            Margin="0,0,3,0"
+            HeightRequest="{Binding Source={x:Reference this}, Path=HeightIcons}"
+            HorizontalOptions="Center"
+            Source="{Binding Source={x:Reference this}, Path=ImgStar4}">
+            <Image.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding Source={x:Reference this}, Path=ImgStar4ClickCommand}" NumberOfTapsRequired="1" />
+            </Image.GestureRecognizers>
+        </Image>
+        <Image
+            Grid.Row="0"
+            Grid.Column="4"
+            HeightRequest="{Binding Source={x:Reference this}, Path=HeightIcons}"
+            HorizontalOptions="Center"
+            Source="{Binding Source={x:Reference this}, Path=ImgStar5}">
+            <Image.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding Source={x:Reference this}, Path=ImgStar5ClickCommand}" NumberOfTapsRequired="1" />
+            </Image.GestureRecognizers>
+        </Image>
+    </Grid>
+    <!--  Frame  -->
 </VerticalStackLayout>
