--- a/Bookshelf/Views/Book/AddBook.xaml
+++ b/Bookshelf/Views/Book/AddBook.xaml
@@ -121,7 +121,16 @@
                         <Picker ItemsSource="{Binding StatusList}" SelectedIndex="{Binding PkrStatusSelectedIndex}" />
                     </Frame>
 
-                    <components:RatingBar Rate="{Binding Rate}" RatingBarIsVisible="{Binding RatingBarIsVisible}" />
+                    <Frame
+                        Margin="0,5,0,5"
+                        Padding="10,0,10,0"
+                        BackgroundColor="#101923"
+                        BorderColor="{StaticResource ActiveColor}"
+                        CornerRadius="5"
+                        HorizontalOptions="CenterAndExpand"
+                        IsVisible="{Binding RatingBarIsVisible}">
+                        <components:RatingBar Rate="{Binding Rate}" RatingBarIsVisible="{Binding RatingBarIsVisible}" />
+                    </Frame>
 
                     <components:BorderedEditor
                         EditorIsVisible="{Binding EdtCommentIsVisible}"
