--- a/Bookshelf/Views/SignIn.xaml
+++ b/Bookshelf/Views/SignIn.xaml
@@ -98,16 +98,36 @@
                             </Label.GestureRecognizers>
                         </Label>
                     </HorizontalStackLayout>
-                    <Label
-                        Margin="0,20,0,0"
-                        FontAttributes="Italic"
-                        FontFamily="OpenSansRegular"
-                        FontSize="10"
-                        HorizontalOptions="End"
-                        Text="@Emanuel Martins"
-                        TextColor="{StaticResource Gray100}"
-                        VerticalOptions="End" />
-
+                    <Grid
+                        Margin="0,5,0,0"
+                        HorizontalOptions="FillAndExpand"
+                        VerticalOptions="EndAndExpand">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Label
+                            Margin="0,0,0,10"
+                            FontFamily="OpenSansSemibold"
+                            FontSize="12"
+                            SemanticProperties.Description="Versão"
+                            Text="{Binding Version}"
+                            VerticalOptions="End" />
+                        <Label
+                            Grid.Row="0"
+                            Grid.Column="1"
+                            Margin="0,20,0,0"
+                            FontAttributes="Italic"
+                            FontFamily="OpenSansRegular"
+                            FontSize="10"
+                            HorizontalOptions="End"
+                            Text="@Emanuel Martins"
+                            TextColor="{StaticResource Gray100}"
+                            VerticalOptions="End" />
+                    </Grid>
                 </VerticalStackLayout>
             </Frame>
         </ScrollView>
