--- a/Bookshelf/Views/Book/BookHistoric.xaml
+++ b/Bookshelf/Views/Book/BookHistoric.xaml
@@ -40,11 +40,11 @@
                         Color="Black" />
                 </Button.ImageSource>
             </Button>
-            <Frame
+            <Border
                 Margin="5"
                 Padding="5"
                 BackgroundColor="Transparent"
-                CornerRadius="10"
+                StrokeShape="RoundRectangle 10"
                 VerticalOptions="FillAndExpand">
                 <ListView
                     Margin="0"
@@ -58,7 +58,7 @@
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="model:UIBookHistoric">
                             <ViewCell>
-                                <Frame Margin="0,0,0,5" BackgroundColor="Transparent">
+                                <Border Margin="0,0,0,5" BackgroundColor="Transparent">
                                     <Grid>
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="Auto" />
@@ -111,7 +111,7 @@
                                                 TextType="Html" />
                                         </Border>
                                     </Grid>
-                                </Frame>
+                                </Border>
                             </ViewCell>
                         </DataTemplate>
                     </ListView.ItemTemplate>
@@ -131,7 +131,7 @@
                         </Grid>
                     </ListView.Footer>
                 </ListView>
-            </Frame>
+            </Border>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
