--- a/Bookshelf/Views/GoogleSearch/GoogleBooksResults.xaml
+++ b/Bookshelf/Views/GoogleSearch/GoogleBooksResults.xaml
@@ -17,10 +17,10 @@
     </ContentPage.Behaviors>
     <ContentPage.Content>
         <StackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="FillAndExpand">
-            <Frame
+            <Border
                 Padding="10,0,10,5"
                 HorizontalOptions="FillAndExpand"
-                Style="{StaticResource FramePrimary}">
+                Style="{StaticResource BorderPrimary}">
                 <StackLayout Margin="0" IsEnabled="{Binding IsConnected}">
                     <components:BorderedEntry
                         LabelText="Digite o título do livro"
@@ -28,12 +28,12 @@
                         Text="{Binding SearchText}" />
                     <!--  TextTransformValue="Uppercase"  -->
                 </StackLayout>
-            </Frame>
-            <Frame
+            </Border>
+            <Border
                 Margin="5"
                 Padding="5"
                 BackgroundColor="Transparent"
-                CornerRadius="10"
+                StrokeShape="RoundRectangle 10"
                 VerticalOptions="FillAndExpand">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -63,11 +63,11 @@
                         <ListView.ItemTemplate>
                             <DataTemplate x:DataType="model:UIGoogleBook">
                                 <ViewCell>
-                                    <Frame
+                                    <Border
                                         Margin="0,0,0,5"
                                         BackgroundColor="#101923"
-                                        BorderColor="#2B659B"
-                                        CornerRadius="10">
+                                        Stroke="#2B659B"
+                                        StrokeShape="RoundRectangle 10">
                                         <StackLayout HorizontalOptions="FillAndExpand" Orientation="Vertical">
                                             <Label
                                                 FontFamily="EBGaramondSemiBold"
@@ -134,7 +134,7 @@
                                                     />-->
                                             </Grid>
                                         </StackLayout>
-                                    </Frame>
+                                    </Border>
                                 </ViewCell>
                             </DataTemplate>
                         </ListView.ItemTemplate>
@@ -173,7 +173,7 @@
                         </Button.ImageSource>
                     </Button>
                 </Grid>
-            </Frame>
+            </Border>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
