--- a/Bookshelf/Views/UpdatePassword.xaml
+++ b/Bookshelf/Views/UpdatePassword.xaml
@@ -12,7 +12,7 @@
     Style="{StaticResource ContentPage}">
     <ScrollView HorizontalOptions="CenterAndExpand">
         <StackLayout>
-            <Frame IsEnabled="{Binding IsNotBusy}" Style="{StaticResource FramePrimary}">
+            <Border IsEnabled="{Binding IsNotBusy}" Style="{StaticResource BorderPrimary}">
                 <VerticalStackLayout>
                     <components:BorderedEntry
                         LabelText="Email"
@@ -43,7 +43,7 @@
                         TextColor="{StaticResource Gray100}"
                         VerticalOptions="End" />
                 </VerticalStackLayout>
-            </Frame>
+            </Border>
         </StackLayout>
     </ScrollView>
 </ContentPage>
