--- a/Bookshelf/Components/BorderedNumericEntry.xaml
+++ b/Bookshelf/Components/BorderedNumericEntry.xaml
@@ -7,7 +7,7 @@
     x:Name="this"
     Margin="0,5,0,0">
     <Label Style="{StaticResource LblHEntry}" Text="{Binding Source={x:Reference this}, Path=LabelText}" />
-    <Frame Style="{StaticResource EntryBorders}">
+    <Border Style="{StaticResource EntryBorders}">
         <Entry
             HorizontalOptions="FillAndExpand"
             Keyboard="Numeric"
@@ -20,5 +20,5 @@
         </Entry>
         <!--  erro no net 7 impossibilita o uso dessa função, necessário esperar fix ser publicado no net 8  -->
         <!--  TextTransform="{Binding Source={x:Reference this},Path= TextTransformValue}"  -->
-    </Frame>
+    </Border>
 </VerticalStackLayout>
