--- a/Bookshelf/Views/Book/BookDetail.xaml
+++ b/Bookshelf/Views/Book/BookDetail.xaml
@@ -38,6 +38,14 @@
             <Setter Property="Opacity" Value="0.9" />
             <Setter Property="VerticalOptions" Value="Start" />
         </Style>
+        <Style x:Key="LocalBorder" TargetType="Border">
+            <Setter Property="Margin" Value="0,5,0,5" />
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="BackgroundColor" Value="#101923" />
+            <Setter Property="Stroke" Value="{StaticResource ActiveColor}" />
+            <Setter Property="StrokeShape" Value="RoundRectangle 5" />
+            <Setter Property="HorizontalOptions" Value="CenterAndExpand" />
+        </Style>
     </ContentPage.Resources>
     <ContentPage.Content>
         <ScrollView Padding="0" VerticalOptions="StartAndExpand">
@@ -106,7 +114,6 @@
                                         Color="Black" />
                                 </Button.ImageSource>
                             </Button>
-
                         </VerticalStackLayout>
                     </toolkit:Expander.Content>
                 </toolkit:Expander>
@@ -242,26 +249,14 @@
                         VerticalOptions="Fill" />
 
                     <!--    -->
-                    <Frame
-                        Margin="0,5,0,5"
-                        Padding="0"
-                        BackgroundColor="#101923"
-                        BorderColor="{StaticResource ActiveColor}"
-                        CornerRadius="5"
-                        HorizontalOptions="CenterAndExpand">
+                    <Border Style="{StaticResource LocalBorder}">
                         <Picker ItemsSource="{Binding StatusList}" SelectedIndex="{Binding PkrStatusSelectedIndex}" />
-                    </Frame>
+                    </Border>
 
-                    <Frame
-                        Margin="0,5,0,5"
-                        Padding="10,0,10,0"
-                        BackgroundColor="#101923"
-                        BorderColor="{StaticResource ActiveColor}"
-                        CornerRadius="5"
-                        HorizontalOptions="CenterAndExpand"
-                        IsVisible="{Binding RatingBarIsVisible}">
+                    <Border IsVisible="{Binding RatingBarIsVisible}" Style="{StaticResource LocalBorder}">
                         <components:RatingBar Rate="{Binding Rate}" RatingBarIsVisible="{Binding RatingBarIsVisible}" />
-                    </Frame>
+                    </Border>
+
                     <!--  Comment  -->
                     <components:BorderedEditor
                         EditorIsVisible="{Binding EdtCommentIsVisible}"
