--- a/Bookshelf/Views/BookList.xaml
+++ b/Bookshelf/Views/BookList.xaml
@@ -15,24 +15,23 @@
         <toolkit:EventToCommandBehavior Command="{Binding OnAppearingCommand}" EventName="Appearing" />
     </ContentPage.Behaviors>
     <ContentPage.Content>
-
         <StackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="FillAndExpand">
-            <Frame
+            <Border
                 Padding="10,0,10,5"
                 HorizontalOptions="FillAndExpand"
-                Style="{StaticResource FramePrimary}">
+                Style="{StaticResource BorderPrimary}">
                 <StackLayout Margin="0">
                     <components:BorderedEntry
                         LabelText="Digite o título do livro"
                         MaxLength="100"
                         Text="{Binding SearchTitle}" />
                 </StackLayout>
-            </Frame>
-            <Frame
+            </Border>
+            <Border
                 Margin="5"
                 Padding="5"
                 BackgroundColor="Transparent"
-                CornerRadius="10"
+                StrokeShape="RoundRectangle 10"
                 VerticalOptions="FillAndExpand">
                 <ListView
                     CachingStrategy="RecycleElement"
@@ -46,11 +45,11 @@
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="model:UIBookItem">
                             <ViewCell Tapped="ViewCell_Tapped">
-                                <Frame
+                                <Border
                                     Margin="0,0,0,5"
                                     BackgroundColor="#101923"
-                                    BorderColor="{StaticResource ActiveColor}"
-                                    CornerRadius="10">
+                                    Stroke="{StaticResource ActiveColor}"
+                                    StrokeShape="RoundRectangle 10">
                                     <StackLayout HorizontalOptions="FillAndExpand" Orientation="Vertical">
                                         <Label
                                             Padding="0,0,0,10"
@@ -128,7 +127,7 @@
                                                 VerticalOptions="End" />-->
                                         </Grid>
                                     </StackLayout>
-                                </Frame>
+                                </Border>
                             </ViewCell>
                         </DataTemplate>
                     </ListView.ItemTemplate>
@@ -148,7 +147,7 @@
                         </Grid>
                     </ListView.Footer>
                 </ListView>
-            </Frame>
+            </Border>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
