--- a/Bookshelf/Views/Main.xaml
+++ b/Bookshelf/Views/Main.xaml
@@ -10,12 +10,13 @@
     Style="{StaticResource ContentPage}">
     <ContentPage.Resources>
         <!--  carditens  -->
-        <Style x:Key="FrameCardItem" TargetType="Frame">
+        <Style x:Key="BorderCardItem" TargetType="Border">
             <Setter Property="BackgroundColor" Value="{StaticResource SecondaryBGColor}" />
-            <Setter Property="BorderColor" Value="{StaticResource ActiveColor}" />
-            <Setter Property="CornerRadius" Value="10" />
+            <Setter Property="Stroke" Value="{StaticResource ActiveColor}" />
+            <Setter Property="StrokeShape" Value="RoundRectangle 10" />
+            <Setter Property="Padding" Value="10" />
         </Style>
-        <Style x:Key="GridCardItem" TargetType="Frame">
+        <Style x:Key="GridCardItem" TargetType="Grid">
             <Setter Property="VerticalOptions" Value="Start" />
             <Setter Property="HorizontalOptions" Value="FillAndExpand" />
         </Style>
@@ -73,17 +74,16 @@
                 Padding="1"
                 HorizontalOptions="FillAndExpand"
                 VerticalOptions="FillAndExpand">
-                <Frame
+                <Border
                     Margin="5"
-                    Padding="5"
-                    CornerRadius="10"
-                    Style="{StaticResource FramePrimary}">
+                    StrokeShape="RoundRectangle 10"
+                    Style="{StaticResource BorderPrimary}">
                     <VerticalStackLayout Spacing="2">
-                        <Frame Margin="0,5,0,5" Style="{StaticResource FrameCardItem}">
-                            <Frame.GestureRecognizers>
+                        <Border Margin="0,5,0,5" Style="{StaticResource BorderCardItem}">
+                            <Border.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding IllReadCommand}" />
                                 <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
-                            </Frame.GestureRecognizers>
+                            </Border.GestureRecognizers>
                             <Grid Style="{StaticResource GridCardItem}">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="50" />
@@ -117,12 +117,12 @@
                                     SemanticProperties.Description="Acessar lista de livros que vou ler"
                                     Style="{StaticResource ImgAngleRight}" />
                             </Grid>
-                        </Frame>
-                        <Frame Margin="0,0,0,5" Style="{StaticResource FrameCardItem}">
-                            <Frame.GestureRecognizers>
+                        </Border>
+                        <Border Margin="0,0,0,5" Style="{StaticResource BorderCardItem}">
+                            <Border.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding ReadingCommand}" />
                                 <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
-                            </Frame.GestureRecognizers>
+                            </Border.GestureRecognizers>
                             <Grid Style="{StaticResource GridCardItem}">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="50" />
@@ -156,12 +156,12 @@
                                     SemanticProperties.Description="Acessar lista de livros que estou lendo"
                                     Style="{StaticResource ImgAngleRight}" />
                             </Grid>
-                        </Frame>
-                        <Frame Margin="0,0,0,5" Style="{StaticResource FrameCardItem}">
-                            <Frame.GestureRecognizers>
+                        </Border>
+                        <Border Margin="0,0,0,5" Style="{StaticResource BorderCardItem}">
+                            <Border.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding ReadCommand}" />
                                 <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
-                            </Frame.GestureRecognizers>
+                            </Border.GestureRecognizers>
                             <Grid Style="{StaticResource GridCardItem}">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="50" />
@@ -195,12 +195,12 @@
                                     SemanticProperties.Description="Acessar lista de livros que já li"
                                     Style="{StaticResource ImgAngleRight}" />
                             </Grid>
-                        </Frame>
-                        <Frame Margin="0,0,0,5" Style="{StaticResource FrameCardItem}">
-                            <Frame.GestureRecognizers>
+                        </Border>
+                        <Border Margin="0,0,0,5" Style="{StaticResource BorderCardItem}">
+                            <Border.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding InterruptedCommand}" />
                                 <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
-                            </Frame.GestureRecognizers>
+                            </Border.GestureRecognizers>
                             <Grid Style="{StaticResource GridCardItem}">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="50" />
@@ -234,14 +234,14 @@
                                     SemanticProperties.Description="Acessar lista de livros que interrompi a leitura"
                                     Style="{StaticResource ImgAngleRight}" />
                             </Grid>
-                        </Frame>
+                        </Border>
                     </VerticalStackLayout>
-                </Frame>
-                <Frame
+                </Border>
+                <Border
                     Margin="5,0,5,5"
                     Padding="5"
                     BackgroundColor="Transparent"
-                    CornerRadius="10"
+                    StrokeShape="RoundRectangle 10"
                     VerticalOptions="FillAndExpand">
                     <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
                         <Button
@@ -302,7 +302,7 @@
                                 VerticalOptions="End" />
                         </Grid>
                     </StackLayout>
-                </Frame>
+                </Border>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
