--- a/Bookshelf/Views/BookList.xaml
+++ b/Bookshelf/Views/BookList.xaml
@@ -12,7 +12,7 @@
     x:DataType="vm:BookListVM"
     Style="{StaticResource ContentPage}">
     <ContentPage.Behaviors>
-        <toolkit:EventToCommandBehavior Command="{Binding OnAppearingCommand}" EventName="Appearing" />
+        <toolkit:EventToCommandBehavior Command="{Binding AppearingCommand}" EventName="Appearing" />
     </ContentPage.Behaviors>
     <ContentPage.Content>
         <StackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="FillAndExpand">
@@ -47,6 +47,7 @@
                             <ViewCell Tapped="ViewCell_Tapped">
                                 <Border
                                     Margin="0,0,0,5"
+                                    Padding="10"
                                     BackgroundColor="#101923"
                                     Stroke="{StaticResource ActiveColor}"
                                     StrokeShape="RoundRectangle 10">
