--- a/Bookshelf/Views/GoogleSearch/GoogleBooksResults.xaml
+++ b/Bookshelf/Views/GoogleSearch/GoogleBooksResults.xaml
@@ -13,7 +13,7 @@
     x:DataType="vm:GoogleBooksResultsVM"
     Style="{StaticResource ContentPage}">
     <ContentPage.Behaviors>
-        <toolkit:EventToCommandBehavior Command="{Binding OnAppearingCommand}" EventName="Appearing" />
+        <toolkit:EventToCommandBehavior Command="{Binding AppearingCommand}" EventName="Appearing" />
     </ContentPage.Behaviors>
     <ContentPage.Content>
         <StackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="FillAndExpand">
@@ -65,6 +65,7 @@
                                 <ViewCell>
                                     <Border
                                         Margin="0,0,0,5"
+                                        Padding="10"
                                         BackgroundColor="#101923"
                                         Stroke="#2B659B"
                                         StrokeShape="RoundRectangle 10">
