--- a/Bookshelf/Views/Historic.xaml
+++ b/Bookshelf/Views/Historic.xaml
@@ -12,7 +12,7 @@
     x:DataType="vm:HistoricVM"
     Style="{StaticResource ContentPage}">
     <ContentPage.Behaviors>
-        <toolkit:EventToCommandBehavior Command="{Binding OnAppearingCommand}" EventName="Appearing" />
+        <toolkit:EventToCommandBehavior Command="{Binding AppearingCommand}" EventName="Appearing" />
     </ContentPage.Behaviors>
     <ContentPage.Content>
         <StackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="FillAndExpand">
@@ -58,7 +58,10 @@
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="model:UIBookHistoric">
                             <ViewCell>
-                                <Border Margin="0,0,0,5" BackgroundColor="Transparent" Padding="10">
+                                <Border
+                                    Margin="0,0,0,5"
+                                    Padding="10"
+                                    BackgroundColor="Transparent">
                                     <Grid>
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="Auto" />
