definição do binding context no appearing do toolkit ajuste na chamada do display alert.

--- a/Bookshelf/Views/Book/BookDetail.xaml
+++ b/Bookshelf/Views/Book/BookDetail.xaml
@@ -7,6 +7,7 @@
     xmlns:components="clr-namespace:Bookshelf.Components"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:viewmodels="clr-namespace:Bookshelf.ViewModels.Book"
+    x:Name="this"
     x:DataType="viewmodels:BookDetailVM"
     Style="{StaticResource ContentPage}">
     <!--  Title="Detalhes do livro"  -->
