--- a/Bookshelf/Views/Book/BookHistoric.xaml
+++ b/Bookshelf/Views/Book/BookHistoric.xaml
@@ -8,11 +8,15 @@
     xmlns:model="clr-namespace:Models.Books.Historic;assembly=Models"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:vm="clr-namespace:Bookshelf.ViewModels.Book"
+    x:Name="this"
     Title="Histórico"
     x:DataType="vm:BookHistoricVM"
     Style="{StaticResource ContentPage}">
     <ContentPage.Behaviors>
-        <toolkit:EventToCommandBehavior Command="{Binding AppearingCommand}" EventName="Appearing" />
+        <toolkit:EventToCommandBehavior
+            BindingContext="{Binding BindingContext, Source={x:Reference this}, x:DataType=BookHistoricVM}"
+            Command="{Binding AppearingCommand}"
+            EventName="Appearing" />
     </ContentPage.Behaviors>
     <ContentPage.Content>
         <StackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="FillAndExpand">
